add improved template for proceedings

--- a/bio-list.tex
+++ b/bio-list.tex
@@ -5102,12 +5102,23 @@ network that are verifying the transactions. Thus tampering is very
 close to impossibility.
 
 Blockchains \color{blue}``\emph{are an example of a distributed computing system with
-high Byzantine fault tolerance. Decentralized consensus has therefore
-been achieved with a blockchain. This makes blockchains potentially
+high Byzantine fault tolerance.  Decentralized consensus has therefore
+been achieved with a blockchain.  This makes blockchains potentially
 suitable for the recording of events, medical records, and other
 records management activities, such as identity management,
 transaction processing, documenting provenance, food traceability or
-voting}''\color{black} ~\cite{hid-sp18-506-Blockchain}.
+voting}''\color{black}~\cite{hid-sp18-506-Blockchain}.
+
+Alhough, the popular use of blockchain nowadays is with the generation
+of cryptocurrency, blockchain has more to offer. Big corporations as
+well the government Institutions have been realizing the potential of
+the blockchain technology. Recently, the US Department of Health
+sponsored a contest to the public to propose how can blockchain be
+used to help improve the health care systems of the country.  IBM is
+looking into how to integrate blockchain in the food
+industry. Microsoft has partnered with Accenture to use blockchain to
+store who don't have any form of identification and there are billions
+of them in the world. Blockchain is here to stay.
 
 
 \begin{IU}
@@ -5117,18 +5128,11 @@ hid-sp18-506
 \href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-blockchain.tex}{abstract-blockchain.tex}
 
  
-chktex:
-\begin{tiny}
-\begin{verbatim}
-Warning 39 in ../hid-sp18-506/technology/abstract-blockchain.tex line 26: Double
-space found. voting'' ~\cite{hid-sp18-506-Blockchain}.           ^
-\end{verbatim}
-\end{tiny}
 
-Wordcount: 173
+Wordcount: 271
 
 
-Quote ratio: 29.35 \%
+Quote ratio: 19.88 \%
  
 Max Line length: 85
 \end{IU}
@@ -5139,7 +5143,7 @@ Max Line length: 85
 Ethereum is an open-source, public, distributed computing that \color{blue}``\emph{runs
 smart contracts: applications that run exactly as programmed without
 any possibility of downtime, censorship, fraud or third-party
-interference}''\color{black} ~\cite{hid-sp18-506-EthereumOrg}.
+interference}''\color{black}~\cite{hid-sp18-506-EthereumOrg}.
 
 A smart contract is a computer protocol intended to digitally
 facilitate, verify, or enforce the negotiation or performance of a
@@ -5147,14 +5151,24 @@ contract without third parties which means there is no need for
 \emph{middlemen} like lawyers or notaries. In theory, this means that
 you can carry out transactions without the waiting times inherent to
 paper filings, and without paying fees to whoever would typically
-oversee such a transaction. This is particularly important for people
+oversee such a transaction.  This is particularly important for people
 living in countries where the legal system is corrupt, or woefully
-inefficient. These transactions are trackable and irreversible.
+inefficient.  These transactions are trackable and irreversible.
 
 Although smart contract technology is still a very new, it has a wide
 range of potential applications like as voting, global supply chains,
-medical records, the financial system. It is very promising it is
+medical records, the financial system.  It is very promising it is
 believed that its full potential has yet to be discovered.
+
+
+One application of Ethereum is the generation of Crypto
+currency. There are still a lot of doubts regarding the usefulness of
+cryptocurrency. A lot of people are still on the fence whether they
+Use cryptocurrency as a real currency or not. However, the blockchain
+technology on which Ethereum is running is a real technology that has
+a lot of practical applications. Big companies and government
+institutions are investing in the blockchain technology and Ethereum
+can play a major role in it.
 
 
 \begin{IU}
@@ -5164,18 +5178,11 @@ hid-sp18-506
 \href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-ethereum.tex}{abstract-ethereum.tex}
 
  
-chktex:
-\begin{tiny}
-\begin{verbatim}
-Warning 39 in ../hid-sp18-506/technology/abstract-ethereum.tex line 7: Double
-space found. interference'' ~\cite{hid-sp18-506-EthereumOrg}.                 ^
-\end{verbatim}
-\end{tiny}
 
-Wordcount: 146
+Wordcount: 221
 
 
-Quote ratio: 13.59 \%
+Quote ratio: 9.57 \%
  
 Max Line length: 87
 \end{IU}
@@ -5192,7 +5199,7 @@ record-keeping technology, known as the blockchain, to create a
 permanent identity.
  
 The rapid proliferation of smart devices globally, combined with
-ever-increasing computing power and rapidly expanding broadband
+ever-increasing computing power and rapidly expanding broadbanda
 coverage, enables new methods of registration and facilitates ongoing
 interaction between individuals and their identity data.
  
@@ -5205,6 +5212,13 @@ accurate population data, public and private organizations struggle to
 broadly and accurately deliver the most basic human
 services}''\color{black}~\cite{hid-sp18-506-NoID}.
 
+Most people associate cryptocurrency with blockchain. But blockchain
+obviously has more to offer. This is an example where the blockchain
+technology has a significant social impact outside of the usual
+cryptocurrency. It is so revolutionizing it could replace the data
+storage that we traditionally use for big data. Blockchain still has a
+lot of untapped potential.
+
 
 \begin{IU}
 
@@ -5214,12 +5228,10 @@ hid-sp18-506
 
  
 
-Wordcount: 158
+Wordcount: 208
 
 
-Quote ratio: 38.33 \%
-
-WARNING: Quote ratio very high
+Quote ratio: 29.62 \%
  
 Max Line length: 79
 \end{IU}
@@ -5232,19 +5244,26 @@ Ripple Transaction Protocol is an open-source protocol that allows
 transfer of anything of value (usually payments) on the internet.
 
 \color{blue}``\emph{The Ripple network enables secure, instant and nearly free global
-financial transactions of any size with no chargebacks.}''\color{black}
-\cite{hid-sp18-506-RippleNetwork} \color{blue}``\emph{Ripple provides one frictionless
+financial transactions of any size with no chargebacks}''\color{black}
+\cite{hid-sp18-506-RippleNetwork}.  \color{blue}``\emph{Ripple provides one frictionless
 experience to send money globally using the power of
 blockchain}''\color{black}~\cite{hid-sp18-506-GlobalPayment}.
 
 
 There are 3 problems that ripple are trying to solve in the current
-payment systems available now- high fees, charges for currency
+payment systems available now high fees, charges for currency
 exchanges and processing delays.
 
 Banks today built their own system for their customers that dont
-easily interact with each other. The Ripple network is designed to
+easily interact with each other.  The Ripple network is designed to
 connect different payment systems together.
+
+With ripple the transaction fees are very minimal and comparative less
+than what for example Visa charges. And there are no foreign
+exnchanges loses since the the currency is never converted to any
+other currency from the source to the destination. The transfer is
+also completed within minutes compared to the usual 3-business-days
+waiting period when sending money thru the traditional means.
 
 
 \begin{IU}
@@ -5255,14 +5274,12 @@ hid-sp18-506
 
  
 
-Wordcount: 97
-
-ERROR: This abstract is too short.
+Wordcount: 155
 
 
-Quote ratio: 26.21 \%
+Quote ratio: 18.28 \%
  
-Max Line length: 86
+Max Line length: 88
 \end{IU}
 
 \section{Scikit-learn}
@@ -5274,15 +5291,23 @@ simple and efficient, accessible to non-experts, and reusable in
 various contexts. Its goal is to provide a set of common algorithms to
 Python users through a consistent interface.
 
-This package focuses on bringing machine learning to non-specialists
-using a general-purpose high-level language that is easy to
-follow. \color{blue}``\emph{Emphasis is put on ease of use, performance, documentation,
-and API consistency. It has minimal dependencies and is distributed
-under the simplified BSD license, encouraging its use in both academic
-and commercial settings. Source code, binaries, and documentation can
-be downloaded from http://scikit-learn.sourceforge.net}''\color{black}
+This package focuses on bringing m achine learning to non-specialists
+using a general-purpose high-level language that is easy tofollow.
+\color{blue}``\emph{Emphasis is put on ease of use, performance, documentation, and API
+consistency.  It has minimal dependencies and is distributed under the
+simplified BSD license, encouraging its use in both academic and
+commercial settings. Source code, binaries, and documentation can be
+downloaded from http://scikit-learn.sourceforge.net}''\color{black}
 ~\cite{hid-sp18-506-Scikit-learn}.
 
+	
+Although the library is easy to use its sophisticationand power to
+analyze big data is never lost. This library has earned respect not
+only in the academe but also in the industry. There are increasing
+demand in the job market for scientist and engineers who specialize in
+this library. The author himself has personally used this library and
+can attest to its functionality. It has simplified a lot of usage of
+algorithms but it still is a powerful tool.
 
 
 \begin{IU}
@@ -5293,14 +5318,10 @@ hid-sp18-506
 
  
 
-Wordcount: 100
-
-WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+Wordcount: 173
 
 
-Quote ratio: 37.92 \%
-
-WARNING: Quote ratio very high
+Quote ratio: 24.98 \%
  
 Max Line length: 87
 Error: URL found, use citation instead
@@ -5690,7 +5711,9 @@ Max Line length: 77
 \end{IU}
 
 \section{Apttus}
-\index{CRM} \index{AI} \index{Quote-to-cash}
+\index{CRM}
+\index{AI}
+\index{Quote-to-cash}
 
 Apttus provide various products for Customer Relationship Management
 (CRM) and use artificial intelligence (AI) to maximize the customer
@@ -5700,7 +5723,7 @@ technology. Apttus product include Enterprise Contract Management,
 Quote-to-Cash, Configure Price Quote, Business to Business (B2B)
 E-Commerce, Buy-Side Contract Management and Revenue Management. These
 are the industry standard process and Apttus help to automate these
-process by using artificial intelligence . Apttus Quote-to-Cash
+process by using artificial intelligence. Apttus Quote-to-Cash
 artificial intelligent product used for automating the end to end
 process of customer's intent to buy the product and ultimately
 customer buying the product. The Quote-to-cash process start with the
@@ -5722,21 +5745,8 @@ hid-sp18-511
 \href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-apttus.tex}{abstract-apttus.tex}
 
  
-chktex:
-\begin{tiny}
-\begin{verbatim}
-Warning 24 in ../hid-sp18-511/technology/abstract-apttus.tex line 2: Delete this
-space to maintain correct pagereferences. \index{CRM} \index{AI} \index{Quote-
-to-cash}              ^ Warning 24 in ../hid-sp18-511/technology/abstract-
-apttus.tex line 2: Delete this space to maintain correct pagereferences.
-\index{CRM} \index{AI} \index{Quote-to-cash}                         ^ Warning
-26 in ../hid-sp18-511/technology/abstract-apttus.tex line 12: You ought to
-remove spaces in front of punctuation. process by using artificial intelligence
-. Apttus Quote-to-Cash                                           ^
-\end{verbatim}
-\end{tiny}
 
-Wordcount: 164
+Wordcount: 161
 
 
 Quote ratio: 0.00 \%
@@ -9695,6 +9705,45 @@ hid-sp18-413
 \href{https://github.com/cloudmesh-community/hid-sp18-413/blob/master//technology/hid-sp18-413.bib}{../hid-sp18-413/technology/hid-sp18-413.bib}
 
 \end{IU}
+\input{../hid-sp18-414/bio-leite-john.tex}
+
+\begin{IU}
+
+hid-sp18-414
+
+\url{https://github.com/cloudmesh-community/hid-sp18-414}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-414/issues}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/abstract-HyperledgerIndy.tex}{abstract-HyperledgerIndy.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/abstract-HyperledgerFabric.tex}{abstract-HyperledgerFabric.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/abstract-HyperledgerBurrow.tex}{abstract-HyperledgerBurrow.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/abstract-HyperledgerSawtooth.tex}{abstract-HyperledgerSawtooth.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/abstract-HyperledgerIroha.tex}{abstract-HyperledgerIroha.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-414/blob/master//technology/hid-sp18-414.bib}{../hid-sp18-414/technology/hid-sp18-414.bib}
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Hyperledger_Burrow |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Hyperledger_Fabric |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Behlendorf_Interview |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Hyperledger_Indy |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Hyperledger_Iroha |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Hyperledger_Sawtooth |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Linux_Foundation_Sawtooth |
+
+ ERROR: No underscore allowed in citation lables: \verb| hid-sp18-414-Active_Status_Iroha |
+
+\end{IU}
 \input{../hid-sp18-415/bio-mudvari-khatiwada-janaki.tex}
 
 \begin{IU}
@@ -10076,6 +10125,19 @@ hid-sp18-508
  ERROR: Citation Label wrong: \verb| www-futuregrid |
 
 \end{IU}
+\input{../hid-sp18-509/bio-irey-ryan.tex}
+
+\begin{IU}
+
+hid-sp18-509
+
+\url{https://github.com/cloudmesh-community/hid-sp18-509}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-509/issues}
+
+hid-sp18-509.bib is missing
+
+\end{IU}
 \input{../hid-sp18-510/bio-kaul-naveen.tex}
 
 \begin{IU}
@@ -10123,31 +10185,6 @@ hid-sp18-511
 
 \end{IU}
 \input{../hid-sp18-512/bio-kikaya-felix.tex}
-
-\begin{IU}
-
-hid-sp18-512
-
-\url{https://github.com/cloudmesh-community/hid-sp18-512}
-
-\url{https://github.com/cloudmesh-community/hid-sp18-512/issues}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/abstract-amazon-aurora.tex}{abstract-amazon-aurora.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/abstract-amazonml.tex}{abstract-amazonml.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/abstract-amazon-dynamodb.tex}{abstract-amazon-dynamodb.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/abstract-amazon-cloudfront.tex}{abstract-amazon-cloudfront.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/abstract-amazon-vpc.tex}{abstract-amazon-vpc.tex}
-
-\href{https://github.com/cloudmesh-community/hid-sp18-512/blob/master//technology/hid-sp18-512.bib}{../hid-sp18-512/technology/hid-sp18-512.bib}
-
- ERROR: No underscore allowed in citation lables: \verb| hid-sp18-512-amazon-dynamodb_faq |
-
-\end{IU}
-\input{../hid-sp18-512/bio-vonLaszewski-gregor.tex}
 
 \begin{IU}
 
